methods.returning.MethodsReturning.scala.error
Compilation error:
MethodsReturning:-6: error: not found: value haveBaggle
			if (haveBaggle()) 
                            ^MethodsReturning:7: error: return outside method definition
  return x
  ^